[gd_scene load_steps=5 format=3 uid="uid://gn0bjnlbc4tn"]

[ext_resource type="Script" path="res://excretion.gd" id="1_d1oja"]
[ext_resource type="Script" path="res://Sauce.gd" id="2_dloxn"]
[ext_resource type="Texture2D" uid="uid://db3hadh4kabu" path="res://paint_stuff.png" id="2_pfjpe"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_eadlq"]
size = Vector2(6, 7)

[node name="excretion" type="Area2D"]
z_index = 4
collision_layer = 32
collision_mask = 7
script = ExtResource("1_d1oja")

[node name="paint2" type="CollisionShape2D" parent="."]
position = Vector2(-2, 1)
shape = SubResource("RectangleShape2D_eadlq")
one_way_collision_margin = 0.0

[node name="Sauce" type="CharacterBody2D" parent="."]
collision_layer = 32
collision_mask = 7
script = ExtResource("2_dloxn")

[node name="Particle" type="Area2D" parent="Sauce"]
position = Vector2(7, 0)
scale = Vector2(1.52, 1)
collision_mask = 5

[node name="paint3" type="CollisionShape2D" parent="Sauce/Particle"]
position = Vector2(-5.92105, 2)
shape = SubResource("RectangleShape2D_eadlq")
one_way_collision_margin = 0.0

[node name="despawn" type="Timer" parent="Sauce"]
wait_time = 3.0
one_shot = true

[node name="paint" type="CollisionShape2D" parent="Sauce"]
position = Vector2(-2, 1)
shape = SubResource("RectangleShape2D_eadlq")
one_way_collision = true

[node name="red1" type="Sprite2D" parent="Sauce/paint"]
position = Vector2(4, 0)
scale = Vector2(2, 2)
texture = ExtResource("2_pfjpe")

[node name="red2" type="ColorRect" parent="Sauce/paint"]
offset_left = -4.0
offset_right = 25.0
offset_bottom = 8.0
scale = Vector2(0.28, 1)
color = Color(0.677836, 0.104965, 0.201385, 1)

[node name="green1" type="ColorRect" parent="Sauce/paint"]
offset_left = -4.0
offset_right = 25.0
offset_bottom = 8.0
scale = Vector2(0.28, 1)
color = Color(1.39579e-06, 0.573839, 0.0760249, 1)

[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="area_entered" from="Sauce/Particle" to="." method="_on_area_2d_area_entered"]
[connection signal="body_entered" from="Sauce/Particle" to="Sauce" method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Sauce/Particle" to="Sauce" method="_on_area_2d_body_exited"]
[connection signal="timeout" from="Sauce/despawn" to="." method="_on_despawn_timeout"]
